--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,35 @@
 @import '~bootstrap/scss/bootstrap';
+
+.sign-up-div {
+  float: left;
+  clear: both;
+  margin-right: 1em;
+}
+
+.sign-in-div {
+  float: left;
+  margin-top: -1px
+}
+
+.div-with-change-password-form {
+  margin-left: 25px;
+}
+
+.sign-in-div {
+  height: 380px
+}
+
+.sign-in-and-out {
+  margin-top: 30px;
+  display: inline-block;
+
+}
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+
+.main-menu {
+  display: inline-block;
+  margin-left: 17px;
+  width: 66%;
+  // probably wont need these previous one only for 
+}
