successful survey creation using create-survey form
- update survey form with correct ID
- update survey form with correct name tag
- remove double invocation in app.js

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -24,7 +24,7 @@
 }
 
 .sign-up-log-in {
-  display: none;
+  // display: none;
 }
 
 //////////////////////////////// NAV BAR ////////////////////////////////////////////////////////////////////////////////-->
