Added background pictures + other aesthetic features
Looking forward to working with the handlebars-script and giving a 'parallax effect' to one of the pictures

--- a/assets/scripts/templates/surveys.handlebars
+++ b/assets/scripts/templates/surveys.handlebars
@@ -1,3 +1,32 @@
+{{#each surveys as |survey|}}
+<section class="see-all-surveys-section" id="see-all-surveys-section">
+    <div class="row">
+        <h3 style="margin-left: 20px"> Question </h3>
+        <div class="col jumbotron">
+            <p>The question of the survey (which I assume will look something like
+                the
+                folowing: {{log.question}}) is going to be here, so... there...</p>
+        </div>
+
+        <div class="col">
+            {{Number}} answered true to this question <br />
+            {{Number}} answered false to this question
+            <hr />
+            Answer either true or false for this question
+            <div class="row" style="margin-left: .1%">
+                <div class="col button-true-div">
+                    <button class="btn btn-success"> TRUE </button>
+                </div>
+                <div class="col">
+                    <button class="btn btn-danger"> FALSE </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
 {{#each logs as |log|}}
 
 <div class="card text-center">
@@ -25,3 +54,39 @@
 </div>
 
 {{/each}}
+
+
+{{!--
+const mongoose = require('mongoose')
+
+const responseSchema = new mongoose.Schema({
+answer: {
+type: String,
+required: true
+},
+owner: {
+type: mongoose.Schema.Types.ObjectId,
+ref: 'User',
+required: true
+}
+}, {
+timestamps: true
+})
+
+const surveySchema = new mongoose.Schema({
+question: {
+type: String,
+required: true
+},
+
+responses: [responseSchema],
+owner: {
+type: mongoose.Schema.Types.ObjectId,
+ref: 'User',
+required: true
+}
+}, {
+timestamps: true
+})
+
+module.exports = mongoose.model('Survey', surveySchema) --}}
