add delete button to handlebars

--- a/assets/scripts/templates/surveys.handlebars
+++ b/assets/scripts/templates/surveys.handlebars
@@ -3,6 +3,7 @@
   <div>
     <div class="card-header">
       <h5 data-id="{{survey._id}}">{{survey.question}}</h5>
+      <button data-id="{{survey._id}}" id="delete-button" class="btn btn-outline-danger">Delete</button>
     </div>
     <div>
       <button data-id="{{survey._id}}" id="true-button" class="btn btn-success" type="submit" value="true">True</button>
