Eliminated unnecessary white space in home page + added nav-bar to sign up page

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -35,7 +35,7 @@
 }
 
 .sign-up-log-in {
-  // display: none;
+  height: 100vh;
 }
 
 //////////////////////////////// NAV BAR ////////////////////////////////////////////////////////////////////////////////-->
