--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -4,6 +4,7 @@
   display: none;
 }
 
+/////////////////////////////////////////////////////////////////////
 .sign-up-div {
   float: left;
   clear: both;
@@ -163,6 +164,12 @@
 
 textarea {
   margin: 5% 0;
+}
+
+
+.create-survey-section .jumbotron {
+  background: rgba(174, 16, 16, 0.8);
+  margin-top: 30px 5%;
 }
 
 ///////////////////////////////////// MEDIA QUERIES //////////////////////////////////////////
