--- a/assets/scripts/templates/surveys.handlebars
+++ b/assets/scripts/templates/surveys.handlebars
@@ -1,20 +1,32 @@
 {{#each surveys as |survey|}}
-  {{log this}}
-  <div>
-    <div class="card-header">
-      <h5 data-id="{{survey._id}}">{{survey.question}}</h5>
-    </div>
-    <div>
-      <button data-id="{{survey._id}}" id="true-button" class="btn btn-success" type="submit" value="true">True</button>
-      <button data-id="{{survey._id}}" id="false-button" class="btn btn-danger" type="submit" value="false">False</button>
+<div class="row">
+  <div class="col jumbotron">
+    <h3 style="font-weight: bold">SURVEY QUESTION:</h3>
+    <br />
+    <h4 data-id="{{survey._id}}" style="margin-left: 20px">{{survey.question}}</h4>
+    <br />
+  </div>
+  <div class="col answer-div jumbotron">
+    <h2 style="font-weight: normal"> Answer true or false for this question </h2>
+    <br>
+    <div class="row true-and-false-buttons-div" style="margin-left: .1%">
+      <div class="col button-true-div">
+        <button data-id="{{survey._id}}" id="true-button" class="btn btn-success" type="submit" value="true"> TRUE
+        </button>
+      </div>
+      <div class="col">
+        <button data-id="{{survey._id}}" id="false-button" class="btn btn-danger" type="submit" value="false"> FALSE
+        </button>
+      </div>
     </div>
     <div class="survey-responses">
       {{#each survey.responses as |response|}}
-        <div class="">
-          {{log this}}
-          {{this.0.answer}}
-        </div>
+      <div class="">
+        {{this.0.answer}}
+      </div>
       {{/each}}
     </div>
   </div>
+</div>
+<br />
 {{/each}}
