--- a/assets/scripts/templates/surveys.handlebars
+++ b/assets/scripts/templates/surveys.handlebars
@@ -2,14 +2,13 @@
 <div class="row">
   <div class="col jumbotron">
     <h3 style="font-weight: bold">SURVEY QUESTION:</h3>
-    <br />
     <h4 data-id="{{survey._id}}" style="margin-left: 20px">{{survey.question}}</h4>
-    <br />
   </div>
-  <div class="col answer-div jumbotron">
+
+
+  <div class="col answer-div jumbotron" style="margin-left: 1%">
     <h2 style="font-weight: normal"> Answer true or false for this question </h2>
-    <br>
-    <div class="row true-and-false-buttons-div" style="margin-left: .1%">
+    <div class="row true-and-false-buttons-div">
       <div class="col button-true-div">
         <button data-id="{{survey._id}}" id="true-button" class="btn btn-success" type="submit" value="true"> TRUE
         </button>
