--- a/assets/scripts/templates/surveys.handlebars
+++ b/assets/scripts/templates/surveys.handlebars
@@ -1,3 +1,10 @@
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<h2>Answer a Survey!</h2>
 {{#each surveys as |survey|}}
 <div class="row">
   <div class="col jumbotron">
