--- a/assets/scripts/templates/surveys.handlebars
+++ b/assets/scripts/templates/surveys.handlebars
@@ -1,38 +1,20 @@
-<br>
-<br>
-<br>
-<br>
-<br>
 
-<h2>Answer a Survey!</h2>
 {{#each surveys as |survey|}}
-<div class="row">
-  <div class="col jumbotron">
-    <h3 style="font-weight: bold">SURVEY QUESTION:</h3>
-    <h4 data-id="{{survey._id}}" style="margin-left: 20px">{{survey.question}}</h4>
-  </div>
-
-
-  <div class="col answer-div jumbotron" style="margin-left: 1%">
-    <h2 style="font-weight: normal"> Answer true or false for this question </h2>
-    <div class="row true-and-false-buttons-div">
-      <div class="col button-true-div">
-        <button data-id="{{survey._id}}" id="true-button" class="btn btn-success" type="submit" value="true"> TRUE
-        </button>
-      </div>
-      <div class="col">
-        <button data-id="{{survey._id}}" id="false-button" class="btn btn-danger" type="submit" value="false"> FALSE
-        </button>
-      </div>
+  <div class="card m-1" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">{{survey.question}}</h5>
+      <p class="card-text">Asked at: {{survey.location}}</p>
     </div>
-    <div class="survey-responses">
-      {{#each survey.responses as |response|}}
-      <div class="">
-        {{this.0.answer}}
-      </div>
-      {{/each}}
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">
+        <button class="btn btn-block btn-outline-dark" value="yes" type="submit">yes</button>
+      </li>
+      <li class="list-group-item">
+        <button class="btn btn-block btn-outline-dark" value="no" type="submit">no</button>
+      </li>
+    </ul>
+    <div class="card-body align-self-center">
+      <p class="card-text">submitted by <span class="text-secondary">{{survey.author}}</span></p>
     </div>
   </div>
-</div>
-<br />
 {{/each}}
