add response upon yes/no click
- add data-id for handlebars buttons
- re-write event listeners
- edit ui upon submitting response

--- a/assets/scripts/templates/surveys.handlebars
+++ b/assets/scripts/templates/surveys.handlebars
@@ -7,10 +7,10 @@
     </div>
     <ul class="list-group list-group-flush">
       <li class="list-group-item">
-        <button class="btn btn-block btn-outline-dark" value="yes" type="submit">yes</button>
+        <button id="answer-one" data-id="{{survey._id}}" class="btn btn-block btn-outline-dark" value="yes" type="submit">yes</button>
       </li>
       <li class="list-group-item">
-        <button class="btn btn-block btn-outline-dark" value="no" type="submit">no</button>
+        <button id="answer-two" data-id="{{survey._id}}" class="btn btn-block btn-outline-dark" value="no" type="submit">no</button>
       </li>
     </ul>
     <div class="card-body align-self-center">
