add in chart.js and use it
- require chart.js in survey/ui
- create survey chart after answering survey
- display chart in survey's card

--- a/assets/scripts/templates/surveys.handlebars
+++ b/assets/scripts/templates/surveys.handlebars
@@ -6,6 +6,9 @@
       <p class="card-text">Asked at: {{survey.location}}</p>
     </div>
     <div class="card-body survey-stats hidden">
+      <div class="chart-container" style="height:200px; width:200px">
+        <canvas class="the-chart"></canvas>
+      </div>
       <p class="card-text">response stats will go here</p>
     </div>
     <ul class="list-group list-group-flush">
