--- a/assets/scripts/templates/surveys.handlebars
+++ b/assets/scripts/templates/surveys.handlebars
@@ -5,11 +5,10 @@
       <h5 class="card-title">{{survey.question}}</h5>
       <p class="card-text">Asked at: {{survey.location}}</p>
     </div>
-    <div class="card-body survey-stats hidden">
-      <div class="chart-container" style="height:200px; width:200px">
+    <div class="card-body survey-stats pb-0 hidden">
+      <div class="chart-container" style="height:150px; width:246px">
         <canvas class="the-chart"></canvas>
       </div>
-      <p class="card-text">response stats will go here</p>
     </div>
     <ul class="list-group list-group-flush">
       <li class="list-group-item">
