try another image path

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -14,7 +14,7 @@
 }
 
 body {
-  background: linear-gradient( rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7) ), url('public/bar-bottles.jpg');
+  background: linear-gradient( rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7) ), url( 'https://vmcasbarro.github.io/survey-client/public/bar-bottles.jpg');
 
   /* Full height */
   height: 100%;
