--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -13,6 +13,10 @@
   width: 100px;
 }
 
+html {
+  background: rgba(01, 00, 06, 1);
+}
+
 body {
   background: linear-gradient( rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7) ), url( 'public/bar-bottles.jpg');
 
@@ -21,7 +25,7 @@ body {
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
-  background-position: center;
+  background-position: 0px 40px;
   background-repeat: no-repeat;
   background-size: cover;
 }
