add some tooltip code, but commented out for now.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,4 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
+@import 'tooltip';
 @font-face {
   font-family: 'La Patio';
   src: url('public/La_Patio_Script.otf') format('truetype');
